--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,15 @@
 
     <!-- Code Syntax Highlighting -->
     <link rel="stylesheet" href="https://gitcdn.link/repo/jwarby/jekyll-pygments-themes/master/{{ site.highlight_theme }}.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-235977097-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-235977097-1');
+    </script>
 
     <!-- Styles -->
     {% if site.icon != empty -%}
